--- a/OFFERS-345/ru-jewelry-l2-ready/index.html
+++ b/OFFERS-345/ru-jewelry-l2-ready/index.html
@@ -140,6 +140,10 @@
                 <img src="img/photo_2020-09-18_10-50-28.jpg" alt="product">
                 <img src="img/IMG_1529.jpg" alt="product">
                 <img src="img/IMG_1530.jpg" alt="product">
+                <img src="img/IMG_1531.jpg" alt="product">
+                <img src="img/IMG_1532.jpg" alt="product">
+                <img src="img/IMG_1533.jpg" alt="product">
+                <img src="img/IMG_1534.jpg" alt="product">
             </div>
             <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" style="display: none;">
                 <ol class="carousel-indicators">
@@ -301,8 +305,112 @@
                     </div>
                     <a href="#popup-content" class="button popup-btn">Заказать по акции</a>
                 </div>
-
-
+                <div class="product_item">
+                    <div class="product_item-img ">
+                        <img src="img/7.jpg" alt="product">
+                    </div>
+                    <div class="discount">-50%
+                    </div>
+                    <div class="vendor_code">Butterfly Choker</div>
+                    <div class="vendor_description">Choker Butterfly – свежее решение и необычное сочетание материалов, которые изящно впишется в любой образ.
+                    </div>
+                    <div class="price_block clearfix">
+                        <div class="price_item old">
+                            <x-oldprice>78</x-oldprice>
+                            <x-currency>€</x-currency>
+                        </div>
+                        <div class="price_item new">
+                            <x-newprice>39</x-newprice>
+                            <x-currency>€</x-currency>
+                        </div>
+                    </div>
+                    <a href="#popup-content" class="button popup-btn">Заказать по акции</a>
+                </div>
+                <div class="product_item">
+                    <div class="product_item-img ">
+                        <img src="img/8.jpg" alt="product">
+                    </div>
+                    <div class="discount">-50%
+                    </div>
+                    <div class="vendor_code">Gradient Watch</div>
+                    <div class="vendor_description">Поистине роскошные часы Gradient Watch со стильным дизайном, сочетает в себе стиль, качество и функциональность. Часы с градиентом водонепроницаемые и ударопрочные.
+                    </div>
+                    <div class="price_block clearfix">
+                        <div class="price_item old">
+                            <x-oldprice>78</x-oldprice>
+                            <x-currency>€</x-currency>
+                        </div>
+                        <div class="price_item new">
+                            <x-newprice>39</x-newprice>
+                            <x-currency>€</x-currency>
+                        </div>
+                    </div>
+                    <a href="#popup-content" class="button popup-btn">Заказать по акции</a>
+                </div>
+                <div class="product_item">
+                    <div class="product_item-img ">
+                        <img src="img/9.jpg" alt="product">
+                    </div>
+                    <div class="discount">-50%
+                    </div>
+                    <div class="vendor_code">Starry Sky Watch</div>
+                    <div class="vendor_description">Starry Sky Watch подойдет как к  строгому наряду, так и  добавит особую изюминку в романтический образ. Магнитный браслет регулируется по размеру. Часам не страшна вода, а главное - обладательнице украшения обеспечено точное время, благодаря высококачественному кварцевому механизму.
+                    </div>
+                    <div class="price_block clearfix">
+                        <div class="price_item old">
+                            <x-oldprice>78</x-oldprice>
+                            <x-currency>€</x-currency>
+                        </div>
+                        <div class="price_item new">
+                            <x-newprice>39</x-newprice>
+                            <x-currency>€</x-currency>
+                        </div>
+                    </div>
+                    <a href="#popup-content" class="button popup-btn">Заказать по акции</a>
+                </div>
+                <div class="product_item">
+                    <div class="product_item-img ">
+                        <img src="img/10.jpg" alt="product">
+                    </div>
+                    <div class="discount">-50%
+                    </div>
+                    <div class="vendor_code">Rose Box</div>
+                    <div class="vendor_description">Rose Box  - оригинальный подарок родным, близким и любимым людям.
+                        Розами выполнены вручную из ароматного мыла и имеет отделение под украшения. 
+                        </div>
+                    <div class="price_block clearfix">
+                        <div class="price_item old">
+                            <x-oldprice>78</x-oldprice>
+                            <x-currency>€</x-currency>
+                        </div>
+                        <div class="price_item new">
+                            <x-newprice>39</x-newprice>
+                            <x-currency>€</x-currency>
+                        </div>
+                    </div>
+                    <a href="#popup-content" class="button popup-btn">Заказать по акции</a>
+                </div>
+                <div class="product_item">
+                    <div class="product_item-img ">
+                        <img src="img/11.jpg" alt="product">
+                    </div>
+                    <div class="discount">-50%
+                    </div>
+                    <div class="vendor_code">Jewelery Box Cleaner</div>
+                    <div class="vendor_description">Вибрационный очиститель предназначен для глубокой очистки всех видов ювелирных изделий и бижутерии. С помощью этого аппарата Вы сможете вернуть своим украшениям первоначальный сияющий вид.
+                    </div>
+                    <div class="price_block clearfix">
+                        <div class="price_item old">
+                            <x-oldprice>78</x-oldprice>
+                            <x-currency>€</x-currency>
+                        </div>
+                        <div class="price_item new">
+                            <x-newprice>39</x-newprice>
+                            <x-currency>€</x-currency>
+                        </div>
+                    </div>
+                    <a href="#popup-content" class="button popup-btn">Заказать по акции</a>
+                </div>
             </div>
         </div>
     </section>
