--- a/OFFERS-363/mx-p79-cardiofort-form/index.html
+++ b/OFFERS-363/mx-p79-cardiofort-form/index.html
@@ -127,6 +127,7 @@
 							</p>
 							<div class="wrrapper">
 								<img align="left" class="gelat_Bb6MhOHv" src="img/image2.jpg" width="200">
+								<p style="font-size: 22px;">El profesor Luis Recio (especialista en biología molecular)</p>
 							</div>
 							<p> Las revistas médicas profesionales ya han llamado este tratamiento "un avance revolucionario en el tratamiento de las enfermedades cardiovasculares". Además, el profesorha recibido la nominación al Premio Nobel por su éxito. Gracias a la acción de su fórmula, incluso las personas con el grado más severo de hipertensión han bajado su presión arterial a la norma de edad y han recuperado por completo su salud y se han despedido de los medicamentos que destruyen el hígado.</p>
 							<p><b> "Los métodos de tratamiento de la hipertensión conocidos hasta ahora son una pérdida de tiempo y dinero". ¿Qué razones hay para pensar así?</b></p>
@@ -143,13 +144,11 @@
 								<p>La selección de un fármaco para alta presión es un proceso largo, difícil y costoso. Y la admisión posterior se lleva a cabo constantemente o, de hecho, para la mayoría de por vida, ya que su suspensión se acompaña de un aumento de la presión. Dado que las píldoras sólo alivian la presión arterial alta, pero sin afectar la raíz del problema.</p>
 							</p>
 							<b>Por eso, el tratamiento macromolecular del profesor Recio es un verdadero hito en el tratamiento de la hipertensión.</b>
-							<!-- <center>
-								<img src="img/image1.jpg"> <i class="myText1">Así es cómo se produce la suciedad gradual de
-								los vasos. Si nunca has limpiado tus vasos sanguíneos y tienes más de 40 años, tendrán
-								muchas impurezas. Esto puede afectar a tu salud, o incluso puede que este proceso de
-								deterioro ya haya comenzado.</i>
-							</center><br> -->
+						
 							<p> Las pastillas son una sentencia de por vida, destruyen el sistema digestivo y envenenan el cuerpo. Solo sirven para enriquecer a las compañías farmacéuticas. Todo esto consume salud y dinero, que son tan difíciles de ganar. Sin embargo, el tratamiento del profesor Recio se basa únicamente en ingredientes naturales y no causa ningún efecto secundario. <b>El tratamiento macromolecular mejora la circulación sanguínea</b>y normaliza el nivel de metabolismo de las grasas (que previene la aparición de coágulos sanguíneos y placas de colesterol) y aumenta la elasticidad de las paredes vasculares. Combate incluso el tercer grado de hipertensión o aterosclerosis presente, <b>reduce eficazmente la presión arterial a niveles normales, </b> regula la contracción del músculo cardíaco, mejora el metabolismo de lípidos y proteínas (acompañado del depósito de colesterol y algunas fracciones de lipoproteínas en la luz de los vasos).</p>
+							<center>
+								<img src="img/image1.jpg">
+							</center><br>
 							<p> Como ya he mencionado, todo el organismo sufre. Pero, en primer lugar, los órganos y
 							sistemas que están conectados directamente con la circulación sanguínea se ven afectados (el
 							sistema cardiovascular).</p>
@@ -222,7 +221,7 @@
 							El centro de investigación alemán en Dortmund ha demostrado fuera de toda duda la eficacia de Cardiofort. El profesor Recio no deja de recibir nominaciones a premios por su descubrimiento, entre ellos, al Premio Nobel.
 							<p>La buena noticia es que puede obtener Cardiofort, <b>con un 50% de descuento.</b> <a href="">Su precio es de solo 765 pesos en vez de <s>1530 pesos.</s></a> La oferta especial estará vigente hasta el final de 	<script type="text/javascript">
 								dtime_nums(-1, true)
-							  </script> . El tratamiento se puede conseguir mediante la página que sigue.</p>
+							  </script>. El tratamiento se puede conseguir mediante la página que sigue.</p>
 							<a href="">Haga clic aquí para obtener un descuento y curar la hipertensión >></a>
 							
 							<!--Form-->
