--- a/OFFERS-345/l3-it/index.html
+++ b/OFFERS-345/l3-it/index.html
@@ -113,8 +113,8 @@
                     </div>
                     <ul class="ofr_bull">
                         <li> Design elegante e insolito</li>
-                        <li> materiali di qualità</li>
-                        <li> cari al vostro cuore</li>
+                        <li> Materiali di qualità</li>
+                        <li> Cari al vostro cuore</li>
                     </ul> <a href="#catalog" class="button toform"> Vai al catalogo</a>
 
                 </div>
@@ -146,23 +146,18 @@
                         <img src="img/IMG_1528.jpg" class="d-block w-100" alt="product">
                     </div>
                     <div class="carousel-item">
-                        <img src="img/photo_2020-09-18_10-34-30.jpg" class="d-block w-100" alt="product">
-                    </div>
-                    <div class="carousel-item">
                         <img src="img/photo_2020-09-18_10-50-22.jpg" class="d-block w-100" alt="product">
                     </div>
                     <div class="carousel-item">
                         <img src="img/photo_2020-09-18_10-50-28.jpg" class="d-block w-100" alt="product">
                     </div>
+                    <div class="carousel-item">
+                        <img src="img/IMG_1529.jpg" class="d-block w-100" alt="product">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/IMG_1530.jpg" class="d-block w-100" alt="product">
+                    </div>
                 </div>
-                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only"> Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only"> Next</span>
-                </a>
             </div>
             <h2 id="catalog"> Catalogo</h2>
             <div class="products_list clearfix">
@@ -288,12 +283,13 @@
     <!-- /catalog -->
     <section style="padding: 0 0 50px; text-align: center;">
         <div class="wrapper">
+            <p style="margin-bottom: 15px; color: rgb(228, 53, 88); font-weight: bold;"> Sconto extra se compri x o più gioielli</p>
             <p style="margin-bottom: 15px;"> I gioielli hanno un design elegante e moderno e saranno una grande aggiunta a qualsiasi immagine - business, casual o sera.</p>
             <p style="margin-bottom: 15px;"> I nostri gioielli saranno un accento luminoso nella vostra immagine e si combinano con un vestito, un jeans o un abito da lavoro.</p>
             <p style="margin-bottom: 15px;"> La nostra bigiotteria ha un aspetto costoso e dura a lungo grazie ai materiali di alta qualità.</p>
             <p style="margin-bottom: 15px;"> I gioielli con un significato ti aiutano ad esprimere i tuoi sentimenti ai tuoi cari. </p>
-            <p> Comprate un gioiello come regalo per la vostra mamma, sorella, fidanzata o persona cara e sicuramente lo apprezzeranno.</p>
-
+            <p style="margin-bottom: 15px;"> Comprate un gioiello come regalo per la vostra mamma, sorella, fidanzata o persona cara e sicuramente lo apprezzeranno.</p>
+<p style="color: rgb(228, 53, 88); font-weight: bold;">*Consegna gratuita per ordini a partire da 100 euro</p>
     
         </div>
     </section>
@@ -441,8 +437,8 @@
                     </div>
                     <ul class="ofr_bull">
                         <li> Design elegante e insolito</li>
-                        <li> materiali di qualità</li>
-                        <li> cari al vostro cuore</li>
+                        <li> Materiali di qualità</li>
+                        <li> Cari al vostro cuore</li>
                     </ul> <a href="#catalog" class="button toform"> Vai al catalogo</a>
 
                 </div>
@@ -470,14 +466,6 @@
                 <h3> Modello 1</h3>
                 <div class="description"></div>
                 <form id="order_form" class="main-order-form order_form" method="post">
-                    <div class="select">
-                        <select id="standard-select">
-                          <option value=" 1 pezzo 39€ + 7€ consegna"> 1 pezzo 39€ + 7€ consegna</option>
-                          <option value="2 pezzi 70€ + consegna gratis">2 pezzi 70€ + consegna gratis</option>
-                          <option value=" 3 pezzi 90€ + consega gratis"> 3 pezzi 90€ + consega gratis</option>
-                          <option value=" 4 pezzi 120€ + un regalo + consegna gratis"> 4 pezzi 120€ + un regalo + consegna gratis</option>
-                        </select>
-                      </div>
                     <input class="input" type="text" name="name" placeholder="Nome" required>
                     <input class="input" type="tel" name="phone" placeholder="Telefono" required>
                     <input type="hidden" name="comments" value>
