--- a/OFFERS-345/l1-gr/index.html
+++ b/OFFERS-345/l1-gr/index.html
@@ -109,7 +109,8 @@
                 <div class="info_block">
                     <div class="logo">
                         <img src="img/download.jpg" alt="product" style="max-width: 160px;">
-                        <p> Ξεπούλημα κοσμημάτων</p>
+                      
+                      <br>  <p> Ξεπούλημα κοσμημάτων</p>
                     </div>
                     <ul class="ofr_bull">
                         <li> κομψό και ασυνήθιστο σχέδιο</li>
@@ -438,7 +439,7 @@
                 <div class="info_block">
                     <div class="logo">
                         <img src="img/download.jpg" alt="product" style="max-width: 160px;">
-                        <p> Ξεπούλημα κοσμημάτων</p>
+                     <br>   <p> Ξεπούλημα κοσμημάτων</p>
                     </div>
                     <ul class="ofr_bull">
                         <li> κομψό και ασυνήθιστο σχέδιο</li>
