--- a/OFFERS-341/ru/index.html
+++ b/OFFERS-341/ru/index.html
@@ -106,44 +106,19 @@
       </div>
 
       <div class="blog">
-        <h1>Генри Фишер: «В США от лишнего веса избавляются быстрее, чем от простуды. Сегодня любой может похудеть на 5
-          кг в неделю:
-          без химии, диет и физических нагрузок»</h1>
-        <p class="sub">Ведущий эндокринолог Германии рассказал, почему в этом году УВОЛЯТ ВСЕХ ДИЕТОЛОГОВ. Эксклюзив из
-          первых уст</p>
-        <div class="blog__actions">
-          <div>
-            <img src="img/comm.svg" alt="">
-            172
-          </div>
-          <div>
-            <img src="img/book.svg" alt="">
-            63762
-          </div>
-          <div>
-            <img src="img/like.svg" alt="">
-            2384
-          </div>
-          <div>
-            <img src="img/badly.svg" alt="">
-            373
-          </div>
-        </div>
+        <h1>Доктор Гонсалес: Здоровые суставы – залог долголетия</h1>
+        <p class="sub">В то время как многие его ровесники еле передвигаются, 76 летний ревматолог Доктор Гонсалес каждый день занимается спортом, катается на велосипеде и посещает спортзал. Он до сих пор ведет приемы, потому что у него хватает на это сил, и он хочет помочь как можно большему количеству людей обрести вторую молодость. </p>
+        
         <div class="img" style="margin: 0 auto;"><img src="img/blog.jpg" alt=""></div>
-        <div class="blog__box max border-left doctor">
-          <img src="img/blog_ava_1.png" alt="">
-          <p><b>Генри Фишер</b>– заведующий отделением клеточной биофизики в НИИ Общества Макса Планка (MPG).
-            Эндокринолог, консультант Всемирной
-            Организации Здравоохранения по вопросам диетологии.</p>
-        </div>
-        <p>Диеты и синтетические средства для похудения <b>УБИВАЮТ ВАШЕ ЗДОРОВЬЕ!</b> Они могут дать временный эффект,
-          но после
-          возвращения к привычному образу жизни – вы снова потолстеете. Пара месяцев стройного тела не стоят того, чтобы
-          сократить
-          свою жизнь на 5 или 10 лет. К счастью, у современной диетологии появилось решение.</p>
-        <p>В прошлом году Америка занимала первое место по числу людей с лишними килограммами, но <b>сегодня в США почти
-            не осталось
-            людей с избыточным весом.</b> Как такое возможно?</p>
+        <p>Доктор Гонсалес уверен, что залог молодости и долголетия – в здоровых суставах и регулярных занятиях спортом. Наш корреспондент встретился с этим легендарным доктором, чтобы узнать, как он умудряется <a href="">держать себя в такой прекрасной форме.</a>
+
+        </p>
+        <h4>- Доктор Гонсалес, вы говорите, что суставы – это залог здоровья. Но неужели они правда могут влиять на состояние организма?</h4>
+        <p>- Во-первых, я вам хочу сказать, что движение – это жизнь. Это было известно еще древним мудрецам. Регулярные занятия спортом и физическая активность позволяют сохранить здоровье сердечно-сосудистой системы. Но многие люди за 60, я бы даже сказал за 50 прекращают занятия спортом, даже если раньше уделяли этому много внимания. Почему? Потому что <a href="">боль в суставах не дает им нормально двигаться.</a> Они начинают принимать обезболивающие, но это не помогает. Суставы теряют подвижность, эластичность и очень скоро люди оказываются если не в инвалидном кресле, то по крайней мере неспособными вести активный образ жизни.
+        </p>
+        <div class="img" style="margin: 0 auto; max-width: 477px; width: 100%;"><img src="img/blog2.jpg" alt="">
+        <span>С возрастом хрящевая ткань деформируется и разрушается под влиянием стресса, активного спорта, нездорового образа жизни
+        </span></div>
         <p>Они сделали прорыв в диетологии, который изменит весь мир – научились создавать экстракт из плодов
           фортунеллы. Это фрукт
           из Южной Азии, который уничтожает жировые клетки и существенно увеличивает скорость обмена веществ. Проблема в
