--- a/OFFERS-345/ru-jewelry-l1-ready/index.html
+++ b/OFFERS-345/ru-jewelry-l1-ready/index.html
@@ -503,10 +503,10 @@
                 <form id="order_form" class="main-order-form order_form" method="post">
                     <div class="select">
                         <select id="standard-select">
-                          <option value="Love Forever/Love Pendant/Love ring/Caprice Ring/Photo Locket/Zodiac Amulet 1 шт 39€ + 7€ delivery"><p>Love Forever/Love Pendant/Love ring/Caprice Ring/Photo Locket/Zodiac Amulet 1 шт 39€ + 7€ delivery</p></option>
-                          <option value="Love Forever/Love Pendant/Love ring/Caprice Ring/Photo Locket/Zodiac Amulet 2 шт 70€ + delivery free">Love Forever/Love Pendant/Love ring/Caprice Ring/Photo Locket/Zodiac Amulet 2 шт 70€ + delivery free</option>
-                          <option value="Love Forever/Love Pendant/Love ring/Caprice Ring/Photo Locket/Zodiac Amulet 3 шт 90€ + delivery free">Love Forever/Love Pendant/Love ring/Caprice Ring/Photo Locket/Zodiac Amulet 3 шт 90€ + delivery free</option>
-                          <option value="Love Forever/Love Pendant/Love ring/Caprice Ring/Photo Locket/Zodiac Amulet 4 шт 120€ + 5-ая подарок + delivery free">Love Forever/Love Pendant/Love ring/Caprice Ring/Photo Locket/Zodiac Amulet 4 шт 120€ + 5-ая подарок + delivery free</option>
+                          <option value="Love Forever / Love κρεμαστό κόσμημα / Love ring / Caprice Ring / Photo Locket / Zodiac Amulet 1 τεμ 39 € + 7 € παράδοση"><p>Love Forever / Love κρεμαστό κόσμημα / Love ring / Caprice Ring / Photo Locket / Zodiac Amulet 1 τεμ 39 € + 7 € παράδοση</p></option>
+                          <option value="Love Forever / Love κρεμαστό κόσμημα / Love ring / Caprice Ring / Photo Locket / Zodiac Amulet 2 τεμ 70 € + δωρεάν παράδοση">Love Forever / Love κρεμαστό κόσμημα / Love ring / Caprice Ring / Photo Locket / Zodiac Amulet 2 τεμ 70 € + δωρεάν παράδοση</option>
+                          <option value="Love Forever / Love κρεμαστό κόσμημα / Love ring / Caprice Ring / Photo Locket / Zodiac Amulet 3 τεμ 90 € + δωρεάν παράδοση">Love Forever / Love κρεμαστό κόσμημα / Love ring / Caprice Ring / Photo Locket / Zodiac Amulet 3 τεμ 90 € + δωρεάν παράδοση</option>
+                          <option value="Love Forever / Love κρεμαστό κόσμημα / Love ring / Caprice Ring / Photo Locket / Zodiac Amulet 4 τεμ 120 € + 5ο δώρο + δωρεάν παράδοση">Love Forever / Love κρεμαστό κόσμημα / Love ring / Caprice Ring / Photo Locket / Zodiac Amulet 4 τεμ 120 € + 5ο δώρο + δωρεάν παράδοση</option>
                         </select>
                       </div>
                     <input class="input" type="text" name="name" placeholder="Введите ваше имя" required>
