--- a/OFFERS-345/l1-gr/index.html
+++ b/OFFERS-345/l1-gr/index.html
@@ -332,7 +332,6 @@
         <div class="wrapper">
             <h2> ΚΡΙΤΙΚΕΣ ΠΕΛΑΤΩΝ</h2>
             <p class="description"> Περισσότερο από το<span> 95,4%</span> των πελατών προτείνουν το κατάστημά μας</p>
-            <div class="rate"> Μέση βαθμολογία προϊόντος</div>
             <div class="reviews_list owl-carousel">
                 <div class="review_item gkhkuito">
                     <div class="text_block">
@@ -475,11 +474,11 @@
                 <form id="order_form" class="main-order-form order_form" method="post">
                     <div class="select">
                         <select id="standard-select">
-                          <option value="Love Forever/Love Pendant/Love ring/Caprice Ring/Photo Locket/Zodiac Amulet 1 шт 39€ + 7€ delivery">Love Forever/Love Pendant/Love ring/Caprice Ring/Photo Locket/Zodiac Amulet 1 шт 39€ + 7€ delivery</option>
-                          <option value="Love Forever/Love Pendant/Love ring/Caprice Ring/Photo Locket/Zodiac Amulet 2 шт 70€ + delivery free">Love Forever/Love Pendant/Love ring/Caprice Ring/Photo Locket/Zodiac Amulet 2 шт 70€ + delivery free</option>
-                          <option value="Love Forever/Love Pendant/Love ring/Caprice Ring/Photo Locket/Zodiac Amulet 3 шт 90€ + delivery free">Love Forever/Love Pendant/Love ring/Caprice Ring/Photo Locket/Zodiac Amulet 3 шт 90€ + delivery free</option>
-                          <option value="Love Forever/Love Pendant/Love ring/Caprice Ring/Photo Locket/Zodiac Amulet 4 шт 120€ + 5-ая подарок + delivery free">Love Forever/Love Pendant/Love ring/Caprice Ring/Photo Locket/Zodiac Amulet 4 шт 120€ + 5-ая подарок + delivery free</option>
-                        </select>
+                            <option value="Love Forever / Love κρεμαστό κόσμημα / Love ring / Caprice Ring / Photo Locket / Zodiac Amulet 1 τεμ 39 € + 7 € παράδοση"><p>Love Forever / Love κρεμαστό κόσμημα / Love ring / Caprice Ring / Photo Locket / Zodiac Amulet 1 τεμ 39 € + 7 € παράδοση</p></option>
+                            <option value="Love Forever / Love κρεμαστό κόσμημα / Love ring / Caprice Ring / Photo Locket / Zodiac Amulet 2 τεμ 70 € + δωρεάν παράδοση">Love Forever / Love κρεμαστό κόσμημα / Love ring / Caprice Ring / Photo Locket / Zodiac Amulet 2 τεμ 70 € + δωρεάν παράδοση</option>
+                            <option value="Love Forever / Love κρεμαστό κόσμημα / Love ring / Caprice Ring / Photo Locket / Zodiac Amulet 3 τεμ 90 € + δωρεάν παράδοση">Love Forever / Love κρεμαστό κόσμημα / Love ring / Caprice Ring / Photo Locket / Zodiac Amulet 3 τεμ 90 € + δωρεάν παράδοση</option>
+                            <option value="Love Forever / Love κρεμαστό κόσμημα / Love ring / Caprice Ring / Photo Locket / Zodiac Amulet 4 τεμ 120 € + 5ο δώρο + δωρεάν παράδοση">Love Forever / Love κρεμαστό κόσμημα / Love ring / Caprice Ring / Photo Locket / Zodiac Amulet 4 τεμ 120 € + 5ο δώρο + δωρεάν παράδοση</option>
+                          </select>
                       </div>
                     <input class="input" type="text" name="name" placeholder="Εισάγετε Ονοματεπώνυμο" required>
                     <input class="input" type="tel" name="phone" placeholder="Εισαγάγετε Τηλέφωνο" required>
