--- a/OFFERS-345/es-shiny-drop-l1/index.html
+++ b/OFFERS-345/es-shiny-drop-l1/index.html
@@ -140,7 +140,7 @@
                 <img src="img/IMG_1532.jpg" alt="product">
                 <img src="img/IMG_1533.jpg" alt="product">
                 <img src="img/IMG_1534.jpg" alt="product">
-               
+                <img src="img/IMG_1536.jpg" alt="product">
             </div>
             <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" style="display: none;">
                 <ol class="carousel-indicators">
@@ -181,6 +181,9 @@
                     </div>
                     <div class="carousel-item">
                         <img src="img/IMG_1535.jpg" class="d-block w-100" alt="product">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/IMG_1536.jpg" class="d-block w-100" alt="product">
                     </div>
                 </div>
             </div>
@@ -364,6 +367,44 @@
                     <div class="discount"> -50% </div>
                     <div class="vendor_code"> Jewelery Box Cleaner</div>
                     <div class="vendor_description"> El limpiador vibratorio está diseñado para la limpieza profunda de todo tipo de joyas y bisutería. Con este dispositivo podrá devolver sus joyas a su aspecto original.</div>
+                    <div class="price_block clearfix">
+                        <div class="price_item old">
+                            <x-oldprice> 78</x-oldprice>
+                            <x-currency>€</x-currency>
+                        </div>
+                        <div class="price_item new">
+                            <x-newprice> 39</x-newprice>
+                            <x-currency>€</x-currency>
+                        </div>
+                    </div>
+                    <a href="#popup-content" class="button popup-btn"> Ordenar</a>
+                </div>
+                <div class="product_item">
+                    <div class="product_item-img ">
+                        <img src="img/12.jpg" alt="product">
+                    </div>
+                    <div class="discount"> -50% </div>
+                    <div class="vendor_code"> Flower Ring</div>
+                    <div class="vendor_description">Anillo en forma de capullo con cristales.Florece como una flor real - ¡Al girar el círculo especial debajo del capullo, verás un increíble cristal enorme en el centro del anillo!</div>
+                    <div class="price_block clearfix">
+                        <div class="price_item old">
+                            <x-oldprice> 78</x-oldprice>
+                            <x-currency>€</x-currency>
+                        </div>
+                        <div class="price_item new">
+                            <x-newprice> 39</x-newprice>
+                            <x-currency>€</x-currency>
+                        </div>
+                    </div>
+                    <a href="#popup-content" class="button popup-btn"> Ordenar</a>
+                </div>
+                <div class="product_item">
+                    <div class="product_item-img ">
+                        <img src="img/13.jpg" alt="product">
+                    </div>
+                    <div class="discount"> -50% </div>
+                    <div class="vendor_code"> Amuleto "Suerte y Bienestar"</div>
+                    <div class="vendor_description">El amuleto activa los flujos de energía que traen éxito, prosperidad financiera y aumento de la riqueza.</div>
                     <div class="price_block clearfix">
                         <div class="price_item old">
                             <x-oldprice> 78</x-oldprice>
