--- a/OFFERS-341/pt/index.html
+++ b/OFFERS-341/pt/index.html
@@ -100,7 +100,7 @@
         <p class="sub"> Enquanto muitas pessoas da sua idade mal conseguem andar, o reumatologista Dr. Gonçalves, de 76 anos, faz exercício todos os dias, andando de bicicleta e batendo no ginásio. Ele ainda recebe pacientes porque tem suficiente energia para isso, e quer ajudar o maior número de pessoas possível a encontrar um segundo jovem.</p>
 
         <div class="img" style="margin: 0 auto;"><img src="img/blog.jpg" alt></div>
-        <p> O Dr. Gonçalves acredita que a chave para a juventude e longevidade são articulações saudáveis e exercício regular. Apanhámos este lendário médico para descobrir como ele consegue para se manter em tão grande forma.<a href="{offer}" target="_blank"> manter em tão grande forma.</a>
+        <p> O Dr. Gonçalves acredita que a chave para a juventude e longevidade são articulações saudáveis e exercício regular. Apanhámos este lendário médico para descobrir como ele consegue para se manter em tão grande forma <a href="{offer}" target="_blank"> manter em tão grande forma.</a>
 
         </p>
         <h4> - Dr. Gonçalves, diz que as articulações são a chave para a saúde. Mas podem realmente afetar o estado do corpo?</h4>
@@ -151,7 +151,7 @@
             </span>
           </p>
         </div>
-        <p> Este produto não contém ingredientes artificiais, apenas extratos naturais de plantas para estimular a regeneração das cartilagens. Recomendo este produto a todos os meus pacientes e os seus testemunhos sobre ele é a minha melhor motivação para continuar a trabalhar e ajudar as pessoas. Para além dos testemunhos dos meus pacientes, há também mais dados oficiais. Por exemplo, a Organização Mundial de Saúde realizou uma série de ensaios clínicos em 2019<a href="{offer}" target="_blank"> do creme Fortuflex.</a> . Os ensaios envolveram 3.500 pessoas com uma variedade de condições articulares e vários graus de severidade. De acordo com os termos, todos os participantes aplicaram<a href="{offer}" target="_blank"> creme Fortuflex.</a></p>
+        <p> Este produto não contém ingredientes artificiais, apenas extratos naturais de plantas para estimular a regeneração das cartilagens. Recomendo este produto a todos os meus pacientes e os seus testemunhos sobre ele é a minha melhor motivação para continuar a trabalhar e ajudar as pessoas. Para além dos testemunhos dos meus pacientes, há também mais dados oficiais. Por exemplo, a Organização Mundial de Saúde realizou uma série de ensaios clínicos em 2019<a href="{offer}" target="_blank"> do creme Fortuflex</a> . Os ensaios envolveram 3.500 pessoas com uma variedade de condições articulares e vários graus de severidade. De acordo com os termos, todos os participantes aplicaram<a href="{offer}" target="_blank"> creme Fortuflex.</a></p>
         <div class="rating">
           <div class="rating__item"><img src="img/rating1.png" alt><span> E sentiram resultados já após a primeira aplicação</span></div>
           <div class="rating__item"><img src="img/rating2.png" alt><span> Reportaram alívio imediato da dor</span>
