--- a/OFFERS-342/ru/index.html
+++ b/OFFERS-342/ru/index.html
@@ -265,7 +265,8 @@
         <div class="product-resule list">
           <p class="list__item">
             <span>
-              Уникальный природный состав <b><a href="">CardioForte</a></b> делает этот препарат не только эффективным, но и полностью безопасным.
+              Уникальный природный состав <b><a href="">CardioForte</a></b> делает этот препарат не только эффективным,
+              но и полностью безопасным.
 
             </span>
 
@@ -277,7 +278,8 @@
             </span>
 
           </p>
-          <p class="list__item"><span>Пустырник – снижает артериальное давление, вязкость крови и благотворно влияет на нервную систему</span></p>
+          <p class="list__item"><span>Пустырник – снижает артериальное давление, вязкость крови и благотворно влияет на
+              нервную систему</span></p>
           <p class="list__item">
             <span>
               Хмель - устраняет воспаление и способствует похуданию
@@ -291,12 +293,12 @@
             </span>
           </p>
           <p class="list__item">
-           <span>Оливковые листья – снижают риск возникновения диабета
-          </span>
+            <span>Оливковые листья – снижают риск возникновения диабета
+            </span>
           </p>
-        
+
         </div>
-      
+
         <h3>Заказать препарат вы можете на официальном сайте производителя</h3>
         <p>
           — Для этого вам нужно:
@@ -314,164 +316,38 @@
         </p>
         <h4><a href="">Внимание! CardioForte быстро распродается! Для заказа прямо сейчас перейдите по ссылке</a></h4>
         <a href="" style="text-align: center; ">
-          <h4>Закажите сейчас и получите бесплатную бутылку в подарок! Предложение ограничено до   <span class="get-date " data-day-delay="-2"> </span></h4>
+          <h4>Закажите сейчас и получите бесплатную бутылку в подарок! Предложение ограничено до <span class="get-date "
+              data-day-delay="-2"> </span></h4>
         </a>
-
+        <a href=""><img style="width: 100%;" src="img/linc_2.png" alt=""></a>
 
       </div>
       <div class="comments">
         <div class="comments__form">
-
-          <textarea name="" id="" cols="30" rows="1" placeholder="Введите комментарий..."></textarea>
+          <a href=""> <img src="img/uzer.svg" alt=""></a>
+          <textarea name="" id="" cols="30" rows="1" placeholder="Написать комментарий"></textarea>
           <a href="" class="btn">отправить</a>
         </div>
         <br><br>
         <div class="comment">
           <img src="img/ava1.png" alt="">
           <div class="text">
-            <b class="name">Автор: Марк</b>
+            <p><b class="name">Мигель</b> <span>7 часов</span> </p>
             <p>
-              Я в профессиональном спорте с 13 лет. Не жалел себя ради побед. Колени болели так, что аж зубы сводило.
-              Мне даже таблетки уже не помогали. FortuFlex просто творит чудеса. Я восстановился и живу без боли. Правда
-              из спорта теперь только пробежки по утрам. Здоровье дороже. Но мазь очень рекомендую.
-            </p>
-            <a href="" class="comment__btn"><img src="img/repost.svg" alt=""></a>
-          </div>
-        </div>
-        <div class="comment">
-          <img src="img/ava2.png" alt="">
-          <div class="text">
-            <b class="name">Автор: Сара</b>
-            <p>
-              Как удачно зашла, как раз акция! Закажу бабули, у нее тоже колени болят сильно
-            </p>
-            <a href="" class="comment__btn"><img src="img/repost.svg" alt=""></a>
+              Спасибо за такую возможность! Принимаю уже 3й месяц, сейчас заказал еще флакон для жены. Давление перестало скакать, чувствую прилив сил и сахар стал заметно ниже. Очень доволен результатом.</p>
+            <a href="" class="comment__btn"><span>Ответить</span> <img src="img/like.svg" alt=""> <b>19</b></a>
           </div>
         </div>
         <div class="comment right">
-          <img src="img/ava3.png" alt="">
+          <img src="img/ava1.png" alt="">
           <div class="text">
-            <b class="name">Автор: Вера</b>
+            <p><b class="name">Автор: Марк</b> <span>7 часов</span> </p>
             <p>
-              Я тоже зашла заказать деду, ему немногие мази подходят. Хочу попробовать эту</p>
-            <a href="" class="comment__btn"><img src="img/repost.svg" alt=""></a>
+              Спасибо за такую возможность! Принимаю уже 3й месяц, сейчас заказал еще флакон для жены. Давление перестало скакать, чувствую прилив сил и сахар стал заметно ниже. Очень доволен результатом.</p>
+            <a href="" class="comment__btn"><span>Ответить</span> <img src="img/like.svg" alt=""> <b>19</b></a>
           </div>
         </div>
-        <div class="comment">
-          <img src="img/ava4.png" alt="">
-          <div class="text">
-            <b class="name">Автор: Майкл</b>
-            <p>
-              Мне 75, почти как доктору Х. Я едва мог передвигаться по комнате. Двигался как робот, медленно и неуклюже.
-              Колени все красные были, опухшие. Думал все, старость пришла. Сын увидел в интернете мазь FortuFlex и
-              заказал. Прошло 2 месяца, мне намного лучше, я хожу гулять в парк и не мучаюсь от болей ночами. Спасибо!
-            </p>
-            <a href="" class="comment__btn"><img src="img/repost.svg" alt=""></a>
-          </div>
-        </div>
-        <div class="comment">
-          <img src="img/ava5.png" alt="">
-          <div class="text">
-            <b class="name">Автор: Джоанна</b>
-            <p>
-              Пришло быстро, через 2 дня. Буду пробовать, потом отпишусь о результатах.
-            </p>
-            <a href="" class="comment__btn"><img src="img/repost.svg" alt=""></a>
-          </div>
-        </div>
-        <div class="comment right">
-          <img src="img/ava6.png" alt="">
-          <div class="text">
-            <b class="name">Автор: Симона</b>
-            <p>
-              Да, напишите о результатах, а то я сомневаюсь покупать или нет. Боюсь интернет-покупок.</p>
-            <a href="" class="comment__btn"><img src="img/repost.svg" alt=""></a>
-          </div>
-        </div>
-        <div class="comment">
-          <img src="img/ava7.png" alt="">
-          <div class="text">
-            <b class="name">Автор: Джулия</b>
-            <p>
-              Крем мне порекомендовала соседка. Я пришла в шок, когда не узнала ее на улице. Вместо старушки на встречу
-              мне шла бодрая женщина легкой походкой. Она даже как-то вся помолодела, видимо, потому что боли прошли.
-              Рассказала мне что пользуется кремом FortuFlex и я тоже решила заказать. Пока что только начала
-              пользоваться, но боль уже ушла, что очень радует.
-
-            </p>
-            <a href="" class="comment__btn"><img src="img/repost.svg" alt=""></a>
-          </div>
-        </div>
-        <div class="comment">
-          <img src="img/ava8.png" alt="">
-          <div class="text">
-            <b class="name">Автор: Анди</b>
-            <p>
-              Коллаген, гиаурон – это разве все не для женских кремов?
-            </p>
-            <a href="" class="comment__btn"><img src="img/repost.svg" alt=""></a>
-          </div>
-        </div>
-        <div class="comment right">
-          <img src="img/ava9.png" alt="">
-          <div class="text">
-            <b class="name">Автор: Мария</b>
-            <p>
-              Анди, коллаген – это очень важный компонент, обеспечивающий прочность хрящей, а гиаурон помогает
-              удерживать влагу, сохраняя эластичность суставов. Вы правы, эти компоненты важны и для кожи, и для
-              суставов. Это я вам как косметолог со стажем говорю.</p>
-            <a href="" class="comment__btn"><img src="img/repost.svg" alt=""></a>
-          </div>
-        </div>
-        <div class="comment">
-          <img src="img/ava10.png" alt="">
-          <div class="text">
-            <b class="name">Автор: Дэн</b>
-            <p>
-              Вывихнул плечо при переезде в новый дом. Мучался год, страшные боли и неподвижность сустава. FortuFlex
-              очень помог, мне намного лучше, восстановилась подвижность и пропала боль. Сразу видно, что мазь именно
-              лечит, а не просто обезболивает.
-            </p>
-            <a href="" class="comment__btn"><img src="img/repost.svg" alt=""></a>
-          </div>
-        </div>
-        <div class="comment">
-          <img src="img/ava11.png" alt="">
-          <div class="text">
-            <b class="name">Автор: Елена</b>
-            <p>
-              я бабушка пятерых внуков и больные суставы – моя профессиональная болезнь. Много носила их на руках и
-              суставы не выдержали. Дочь принесла крем FortuFlex, у нее коллега по работе его очень хвалила. Мне стало
-              намного лучше, уже могу купать внуков сама, без помощи.
-
-            </p>
-            <a href="" class="comment__btn"><img src="img/repost.svg" alt=""></a>
-          </div>
-        </div>
-        <div class="comment">
-          <img src="img/ava12.png" alt="">
-          <div class="text">
-            <b class="name">Автор: Лара</b>
-            <p>
-              После беременности стали сильно болеть суставы пальцев рук и запястья. Обезболивающие не пью, потому что
-              вредно. Заказала FortuFlex и боль прошла буквально на первый день. К тому же, теперь могу разогнуть пальцы
-              и делать все по дому. Счастлива!
-            </p>
-            <a href="" class="comment__btn"><img src="img/repost.svg" alt=""></a>
-          </div>
-        </div>
-        <div class="comment">
-          <img src="img/ava13.png" alt="">
-          <div class="text">
-            <b class="name">Автор: Эван</b>
-            <p>
-              Надо успеть заказать пока акция не закончилась. Хочется еще пожить полноценной жизнью. Мне 72, и только
-              что встретил свою любовь, так что здоровые коленки мне просто необходимы.
-
-            </p>
-            <a href="" class="comment__btn"><img src="img/repost.svg" alt=""></a>
-          </div>
-        </div>
+        <hr>
       </div>
     </div>
 
